# ruta

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  postbuild.mjs
.github/workflows/: ci.yml
apps/backend/: README.md
apps/backend/database/: Cargo.toml
apps/backend/database/.sqlx/: query-04118bfefae6dd675c88907e72ee3d026abf9ec2c380513dfef24a44f9e69d2b.json  query-2d5248dfaaa5a99f5391b317ea4a24d1187c0d0b816fb904899544bac7dbefdc.json  query-35b79dc4e1bf3196ca0d57dc22cf42abc28c0e925f8d08990eebc2b0a7c99002.json  query-4e68d5bb11b66ed37642a5b1846c4d6a0f2fbed984b5101ca41e01c0d1972f53.json  query-4fa8b0bb305427d05236308a71c440bb8f8c2fcd841bc3cb1b0ae99c30531899.json  query-57e0a4ca685672a1dbd3189b8f7c7b1ad3fca5e971ac4bfa31bc5acb65302b98.json  query-756eef3011b5d729fec51191a332c75b13ccc333059353c2bf2edcd65ec7dbbc.json  query-7743c6c381c0913c20175c260d8d5e5b19d69b25db8615f18f436207d20c511d.json  query-a0b4ffdd448a6619a81fad9addf646dd88db17329adf029b57c409f52d02b6ef.json  query-a6c2f1016d66d03f9e8123a09a34c7d6e9b4e37a24ac9d672456537d3d9c8c20.json  query-afc88b898634457a92def9cfc73bfd7d8d3533b7c37d2caa0794a9420fc6a66e.json  query-f4e03059684c86348cd028dcf0c85af7a1d52399948d695db778c7d609a1debe.json
apps/backend/database/migrations/: 20251022085402_create_database_schema.sql
apps/backend/database/src/: lib.rs
apps/backend/indexer/: .env.example  Cargo.toml
apps/backend/indexer/src/: erc20.rs  error.rs  lib.rs  main.rs  server.rs  service.rs
apps/desktop/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src/: App.css  App.tsx  tailwindcss.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: favicon.icns
apps/desktop/src-tauri/scripts/: generate-types.ts
apps/desktop/src-tauri/src/: generate-schemas.rs  lib.rs  main.rs
apps/desktop/src/components/: Chart.tsx  Dashboard.tsx  Filters.tsx  Settings.tsx  StatusBar.tsx  TransfersTable.tsx
apps/desktop/src/hooks/: useSSE.tsx  useTheme.tsx
apps/desktop/src/mocks/: transfers.ts
src/: main.rs
(+10 files in other folders)
