[package]
name = "ruta"
version = "0.1.0"
edition = "2024"

[dependencies]


[workspace]
members = [
    "apps/backend/database"
]

[workspace.dependencies]
alloy = { version = "0.7.2", features = ["full"] }
serde = '1.0.215'
serde_json = '1.0.133'
sqlx = { version = "0.8", features = [ "bigdecimal", "chrono", "postgres", "runtime-tokio", "tls-native-tls" ] }
thiserror = "2.0.6"