
[package]
name = 'indexer'
version = '1.0.0'
edition = '2021'

[dependencies]
alloy = { workspace = true }
tokio = { workspace = true }
database = { path = '../database', version = '1.0.0' }
thiserror = { workspace = true }
tower = { version = '0.5.1', features = ['limit', 'util'] }
sqlx = { workspace = true }
